--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
-# Ignore all .log files
-*.log
-
-# Ignore node_modules directory
-node_modules/
-
-# Ignore environment files
-.env
-
-# Ignore compiled Python files
-*.pyc
+# Ignore Python cache files
 __pycache__/
+*.pyc
 
-# Ignore system files
+# Ignore virtual environments
+venv/
+env/
+HeartDiseaseDetection_venv/
+
+# Ignore OS files
 .DS_Store
 Thumbs.db
+
+# Ignore logs and temporary filse
+*.log
+*.temp
+
